--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-<img src="c:\Users\CCL\Pictures\Saved Pictures\WhatsApp Image 2024-02-28 at 12.44.52_e43490b8.jpg" height="400" width="650"></a>
+<img src="WhatsApp Image 2024-02-28 at 12.44.52_e43490b8.jpg" height="400" width="650"></a>
  <br>
 
 <h1>New Year Countdown</h1>
